--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -33,7 +33,7 @@
 
   &__card {
     padding: 30px;
-    background: $main-color;
+    background: $accent-color;
     border-radius: 0px 0px 4px 4px;
   }
 
