--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,6 +1,7 @@
 .container {
   padding-left: 15px;
   padding-right: 15px;
+  margin: 0 auto;
   outline: 1px solid red;
 }
 
@@ -9,11 +10,15 @@
     width: 450px;
     margin: 0 auto;
   }
+
+  .nav__list {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 768px) {
   .container {
-    width: 720px;
+    width: 738px;
   }
 }
 
