--- a/css/main.css
+++ b/css/main.css
@@ -55,13 +55,16 @@ button {
   outline: 1px solid red;
 }
 
+.header .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 @media screen and (min-width: 480px) {
   .container {
     width: 450px;
     margin: 0 auto;
-  }
-  .nav__list {
-    display: none;
   }
 }
 
@@ -519,8 +522,136 @@ button {
   outline: none;
 }
 
+.burger-btn,
+.mobile-menu__close-btn {
+  background-color: transparent;
+  border: none;
+  padding: 10px 15px;
+  cursor: pointer;
+}
+
+.burger-btn__icon,
+.close-btn__icon {
+  width: 40px;
+  height: 40px;
+  fill: #212121;
+}
+
+.burger-btn__icon:hover, .burger-btn__icon:focus,
+.close-btn__icon:hover,
+.close-btn__icon:focus {
+  fill: #2196f3;
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  width: 100vw;
+  max-width: 480px;
+  height: 100vh;
+  padding: 48px 40px;
+  background-color: #ffffff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+  transform: translateY(-100%) translateX(50%);
+  transition: transform 250ms linear;
+}
+
+.mobile-menu__close-btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+}
+
+.mobile-menu__item {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: #212121;
+  height: 48px;
+}
+
+.mobile-menu__item:not(:last-child) {
+  padding-bottom: 32px;
+}
+
+.mobile-menu__link {
+  color: #212121;
+}
+
+.mobile-menu__link:hover, .mobile-menu__link:focus {
+  color: #2196f3;
+}
+
+.mobile-menu__contact-item__tel {
+  width: 296px;
+  height: 40px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+.mobile-menu__contact-item__mailto {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+
+.mobile-menu .is-open {
+  transform: translateY(100%) translateX(-50%);
+}
+
+.mobile-social__list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.mobile-social__item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.mobile-social__item:not(:last-child)::after {
+  content: "";
+  width: 22px;
+  height: 0px;
+  margin-left: 10px;
+  border-color: rgba(33, 33, 33, 0.1);
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  transform: rotate(90deg);
+}
+
+.mobile-social__item__link {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+
 .header-boder {
   border: 1px solid #ececec;
+}
+
+@media screen and (max-width: 768px) {
+  .logo .header {
+    width: 134px;
+    height: 28px;
+  }
+  .nav__list {
+    display: none;
+  }
+  .contact {
+    display: none;
+  }
 }
 
 .footer {
