--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,7 @@
 @import "./components/modal";
 @import "./components/modal-form";
 
+@import "./layout/mobile-menu";
 @import "./layout/header";
 @import "./layout/footer";
 @import "./layout/hero";
