--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,6 @@ button {
 .container {
   padding-left: 15px;
   padding-right: 15px;
-  margin: 0 auto;
   outline: 1px solid red;
 }
 
@@ -86,7 +85,7 @@ button {
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  margin-right: 90px;
+  margin-right: 85px;
   color: #000000;
 }
 
@@ -250,46 +249,6 @@ button {
   bottom: 0;
   color: #2196f3;
   transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-}
-
-.contact {
-  display: flex;
-  margin-left: auto;
-  align-items: center;
-}
-
-.contact__item {
-  display: flex;
-  align-items: center;
-  fill: #757575;
-}
-
-.contact__item:not(:last-child) {
-  display: flex;
-  margin-right: 50px;
-}
-
-.contact__link {
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.15;
-  letter-spacing: 0.02em;
-  color: #757575;
-  display: flex;
-  align-items: center;
-  transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-}
-
-.contact__link:hover, .contact__link:focus {
-  color: #2196f3;
-  fill: #2196f3;
-}
-
-.contact__icon {
-  display: flex;
-  align-items: center;
-  margin-right: 10px;
 }
 
 .backdrop {
@@ -522,11 +481,34 @@ button {
   outline: none;
 }
 
+.header-boder {
+  border: 1px solid #ececec;
+}
+
+@media screen and (max-width: 768px) {
+  .logo {
+    font-size: 24px;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+  }
+  .header {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .nav__list {
+    display: none;
+  }
+  .contact {
+    display: none;
+  }
+}
+
 .burger-btn,
 .mobile-menu__close-btn {
   background-color: transparent;
   border: none;
-  padding: 10px 15px;
+  padding: 0;
+  height: 40px;
   cursor: pointer;
 }
 
@@ -546,14 +528,14 @@ button {
 .mobile-menu {
   position: fixed;
   top: 0;
-  left: 50%;
+  left: 0;
   width: 100vw;
-  max-width: 480px;
   height: 100vh;
+  max-width: 480px;
   padding: 48px 40px;
   background-color: #ffffff;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
-  transform: translateY(-100%) translateX(50%);
+  transform: translateY(-100%);
   transition: transform 250ms linear;
 }
 
@@ -567,14 +549,13 @@ button {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 40px;
-  line-height: 1.18;
+  line-height: 1.17;
   letter-spacing: 0.02em;
   color: #212121;
-  height: 48px;
 }
 
 .mobile-menu__item:not(:last-child) {
-  padding-bottom: 32px;
+  padding-bottom: 30px;
 }
 
 .mobile-menu__link {
@@ -585,9 +566,15 @@ button {
   color: #2196f3;
 }
 
-.mobile-menu__contact-item__tel {
-  width: 296px;
-  height: 40px;
+.contact-mobile {
+  padding-bottom: 64px;
+}
+
+.contact-mobile__item:not(:last-child) {
+  padding-bottom: 30px;
+}
+
+.contact-mobile__tel {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 34px;
@@ -596,7 +583,7 @@ button {
   color: #2196f3;
 }
 
-.mobile-menu__contact-item__mailto {
+.contact-mobile__mailto {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 24px;
@@ -605,52 +592,100 @@ button {
   color: #757575;
 }
 
-.mobile-menu .is-open {
-  transform: translateY(100%) translateX(-50%);
-}
-
 .mobile-social__list {
   display: flex;
   flex-wrap: wrap;
 }
 
-.mobile-social__item:not(:last-child) {
-  margin-right: 10px;
+.mobile-social__item {
+  display: flex;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: #2196f3;
 }
 
 .mobile-social__item:not(:last-child)::after {
   content: "";
   width: 22px;
   height: 0px;
-  margin-left: 10px;
   border-color: rgba(33, 33, 33, 0.1);
   border: 1px solid rgba(33, 33, 33, 0.2);
   transform: rotate(90deg);
 }
 
-.mobile-social__item__link {
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 22px;
-  letter-spacing: 0.02em;
-  color: #212121;
+.mobile-social__link {
+  color: #2196f3;
 }
 
-.header-boder {
-  border: 1px solid #ececec;
+.is-open {
+  transform: translateY(0);
 }
 
-@media screen and (max-width: 768px) {
-  .logo .header {
-    width: 134px;
-    height: 28px;
+@media screen and (min-width: 768px) {
+  .burger-btn {
+    display: none;
+  }
+  .mobile-menu {
+    display: none;
   }
   .nav__list {
-    display: none;
+    display: flex;
   }
   .contact {
-    display: none;
+    display: block;
+  }
+  .contact__item:not(:last-child) {
+    padding-bottom: 10px;
+    margin-right: 0;
+  }
+  .contact__link {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.02em;
+    color: #757575;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contact {
+    display: flex;
+    margin-left: auto;
+    align-items: center;
+  }
+  .contact__item {
+    display: flex;
+    align-items: center;
+    fill: #757575;
+  }
+  .contact__item:not(:last-child) {
+    display: flex;
+    margin-right: 50px;
+  }
+  .contact__link {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.15;
+    letter-spacing: 0.02em;
+    color: #757575;
+    display: flex;
+    align-items: center;
+    transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  }
+  .contact__link:hover, .contact__link:focus {
+    color: #2196f3;
+    fill: #2196f3;
+  }
+  .contact__icon {
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
   }
 }
 
