--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,14 +1,14 @@
 .container {
   padding-left: 15px;
   padding-right: 15px;
-  margin: 0 auto;
+  // margin: 0 auto;
   outline: 1px solid red;
-}
 
-.header .container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  .header & {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
 
 @media screen and (min-width: 480px) {
