--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,11 +3,15 @@
 }
 
 @media screen and (max-width: 768px) {
-  .logo .header {
-    // padding-top: 26px;
-    // padding-bottom: 26px;
-    width: 134px;
-    height: 28px;
+  .logo {
+    font-size: 24px;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+  }
+
+  .header {
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
 
   .nav__list {
@@ -16,5 +20,223 @@
 
   .contact {
     display: none;
+  }
+}
+
+.burger-btn,
+.mobile-menu__close-btn {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  height: 40px;
+  cursor: pointer;
+}
+
+.burger-btn__icon,
+.close-btn__icon {
+  width: 40px;
+  height: 40px;
+  fill: $accent-color;
+
+  &:hover,
+  &:focus {
+    fill: #2196f3;
+  }
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  max-width: 480px;
+  padding: 48px 40px;
+  background-color: #ffffff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
+    0px 1px 3px rgba(0, 0, 0, 0.16);
+
+  transform: translateY(-100%);
+  transition: transform 250ms linear;
+
+  &__close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+  }
+
+  &__item {
+    font-family: $main-font;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+
+    color: $accent-color;
+
+    &:not(:last-child) {
+      padding-bottom: 30px;
+    }
+  }
+
+  &__link {
+    color: $accent-color;
+
+    &:hover,
+    &:focus {
+      color: $active-color;
+    }
+  }
+}
+
+.contact-mobile {
+  padding-bottom: 64px;
+  // align-content: flex-end;
+
+  &__item {
+    &:not(:last-child) {
+      padding-bottom: 30px;
+    }
+  }
+
+  &__tel {
+    font-family: $main-font;
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.18;
+    letter-spacing: 0.02em;
+
+    color: #2196f3;
+  }
+
+  &__mailto {
+    font-family: $main-font;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.16;
+    letter-spacing: 0.02em;
+
+    color: $secondary-color;
+  }
+}
+
+.mobile-social {
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  &__item {
+    display: flex;
+    align-items: center;
+
+    font-family: $main-font;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+    color: $active-color;
+
+    // &:not(:last-child) {
+
+    // }
+    &:not(:last-child)::after {
+      content: "";
+      width: 22px;
+      height: 0px;
+      // margin-left: 10px;
+      border-color: rgba(33, 33, 33, 0.1);
+      border: 1px solid rgba(33, 33, 33, 0.2);
+      transform: rotate(90deg);
+    }
+  }
+
+  &__link {
+    color: $active-color;
+  }
+}
+
+.is-open {
+  transform: translateY(0);
+}
+
+@media screen and (min-width: 768px) {
+  .burger-btn {
+    display: none;
+  }
+
+  .mobile-menu {
+    display: none;
+  }
+
+  .nav__list {
+    display: flex;
+  }
+
+  .contact {
+    display: block;
+
+    &__item {
+      &:not(:last-child) {
+        // padding-bottom: 10px;
+        // margin-right: 0;
+      }
+    }
+
+    &__link {
+      font-family: $main-font;
+      font-weight: 500;
+      font-size: 12px;
+      line-height: 1.16;
+      letter-spacing: 0.02em;
+
+      color: $secondary-color;
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contact {
+    display: flex;
+    margin-left: auto;
+    align-items: center;
+
+    &__item {
+      display: flex;
+      align-items: center;
+      fill: $secondary-color;
+    }
+
+    &__item:not(:last-child) {
+      display: flex;
+      margin-right: 50px;
+      padding-bottom: 0;
+    }
+
+    &__link {
+      font-family: $main-font;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 1.15;
+      letter-spacing: 0.02em;
+
+      color: $secondary-color;
+
+      display: flex;
+      align-items: center;
+
+      transition: $transition-animation;
+
+      &:hover,
+      &:focus {
+        color: $active-color;
+        fill: $active-color;
+      }
+    }
+
+    &__icon {
+      display: flex;
+      align-items: center;
+      margin-right: 10px;
+    }
   }
 }
