--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -4,21 +4,21 @@
   height: 50px;
   padding-left: 29px;
 
-  background: var(--active-color);
+  background: $active-color;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   outline: none;
 
-  font-family: var(--main-font);
+  font-family: $main-font;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
   cursor: pointer;
 
-  transition: background-color var(--transition-animation),
-    box-shadow var(--transition-animation),
-    border-radius var(--transition-animation), color var(--transition-animation);
+  transition: background-color $transition-animation,
+    box-shadow $transition-animation, border-radius $transition-animation,
+    color $transition-animation;
 
   display: flex;
   align-items: center;
@@ -26,7 +26,7 @@
   letter-spacing: 0.06em;
 
   color: #ffffff;
-  transition: var(--transition-animation);
+  transition: $transition-animation;
 
   &:hover,
   &:focus {
