--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,51 +1,155 @@
-.features {
-  display: flex;
-  align-items: center;
-  padding-bottom: $section-p;
-  padding-top: $section-p;
+@media screen and (max-width: 767px) {
+  .features {
+    padding: 60px 0;
 
-  &__list {
+    &__list {
+      flex-direction: column;
+    }
+
+    &__image {
+      height: 120px;
+      background-size: 450px 120px;
+      background: #f5f4fa;
+      border-radius: 4px;
+      margin-bottom: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    &__icon {
+      width: 70px;
+      height: 70px;
+    }
+
+    &__title {
+      @include font($fs: 14px, $lh: 16px);
+
+      text-align: center;
+
+      text-transform: uppercase;
+      padding-bottom: 10px;
+    }
+
+    &__text {
+      font-family: $main-font;
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 1.71;
+      letter-spacing: 0.03em;
+
+      color: $secondary-color;
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .features {
     display: flex;
     align-items: center;
-    margin-left: -30px;
-  }
+    padding: 60px 0;
 
-  &__item:not(last-child) {
-    flex-basis: calc(100% / 4);
-    margin-left: 30px;
-  }
+    &__list {
+      display: flex;
+      flex-wrap: wrap;
+      margin-left: -30px;
+      margin-top: -30px;
+    }
 
-  &__image {
-    width: 270px;
-    height: 120px;
-    background-size: 270px 120px;
-    background: #f5f4fa;
-    border-radius: 4px;
-    margin-bottom: 30px;
+    &__item {
+      align-items: center;
+      &:not(last-child) {
+        flex-basis: calc(100% / 2 - 30px);
+        margin-left: 30px;
+        margin-top: 30px;
+      }
+    }
+
+    &__image {
+      height: 120px;
+      background-size: 354px 120px;
+      background: #f5f4fa;
+      border-radius: 4px;
+      margin-bottom: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    &__icon {
+      width: 70px;
+      height: 70px;
+    }
+
+    &__title {
+      @include font($fs: 14px, $lh: 16px);
+
+      text-transform: uppercase;
+      padding-bottom: 10px;
+    }
+
+    &__text {
+      font-family: $main-font;
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 1.71;
+      letter-spacing: 0.03em;
+
+      color: $secondary-color;
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .features {
     display: flex;
     align-items: center;
-    justify-content: center;
-  }
+    padding-bottom: $section-p;
+    padding-top: $section-p;
 
-  &__icon {
-    width: 70px;
-    height: 70px;
-  }
+    &__list {
+      display: flex;
+      align-items: center;
+      margin-left: -30px;
+    }
 
-  &__title {
-    @include font($fs: 14px, $lh: 16px);
+    &__item:not(last-child) {
+      flex-basis: calc(100% / 4 - 30px);
+      margin-left: 30px;
+    }
 
-    text-transform: uppercase;
-    padding-bottom: 10px;
-  }
+    &__image {
+      width: 270px;
+      height: 120px;
+      background-size: 270px 120px;
+      background: #f5f4fa;
+      border-radius: 4px;
+      margin-bottom: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
 
-  &__text {
-    font-family: $main-font;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
+    &__icon {
+      width: 70px;
+      height: 70px;
+    }
 
-    color: $secondary-color;
+    &__title {
+      @include font($fs: 14px, $lh: 16px);
+
+      text-transform: uppercase;
+      padding-bottom: 10px;
+    }
+
+    &__text {
+      font-family: $main-font;
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 1.71;
+      letter-spacing: 0.03em;
+
+      color: $secondary-color;
+    }
   }
 }
