--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -56,7 +56,7 @@
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
     0px 1px 3px rgba(0, 0, 0, 0.16);
 
-  transform: translateY(-100%);
+  transform: translateY(-100%) translateX(-100%);
   transition: transform 250ms linear;
 
   &__close-btn {
@@ -136,14 +136,10 @@
     letter-spacing: 0.02em;
     color: $active-color;
 
-    // &:not(:last-child) {
-
-    // }
     &:not(:last-child)::after {
       content: "";
       width: 22px;
       height: 0px;
-      // margin-left: 10px;
       border-color: rgba(33, 33, 33, 0.1);
       border: 1px solid rgba(33, 33, 33, 0.2);
       transform: rotate(90deg);
@@ -156,7 +152,7 @@
 }
 
 .is-open {
-  transform: translateY(0);
+  transform: translateY(0) translateX(0);
 }
 
 @media screen and (min-width: 768px) {
@@ -176,9 +172,13 @@
     display: block;
 
     &__item {
+      display: flex;
+      align-items: center;
+      fill: $secondary-color;
+
       &:not(:last-child) {
-        // padding-bottom: 10px;
-        // margin-right: 0;
+        padding-bottom: 10px;
+        margin-right: 0;
       }
     }
 
@@ -190,6 +190,24 @@
       letter-spacing: 0.02em;
 
       color: $secondary-color;
+
+      display: flex;
+      align-items: center;
+
+      transition: $transition-animation;
+
+      &:hover,
+      &:focus {
+        color: $active-color;
+        fill: $active-color;
+      }
+    }
+
+    &__icon {
+      display: flex;
+      align-items: center;
+      margin-right: 10px;
+      fill: $secondary-color;
     }
   }
 }
@@ -204,12 +222,18 @@
       display: flex;
       align-items: center;
       fill: $secondary-color;
+
+      &:not(:last-child) {
+        display: flex;
+        margin-right: 50px;
+        padding-bottom: 0;
+      }
     }
 
-    &__item:not(:last-child) {
+    &__icon {
       display: flex;
-      margin-right: 50px;
-      padding-bottom: 0;
+      align-items: center;
+      margin-right: 10px;
     }
 
     &__link {
@@ -218,12 +242,9 @@
       font-size: 14px;
       line-height: 1.15;
       letter-spacing: 0.02em;
-
       color: $secondary-color;
-
       display: flex;
       align-items: center;
-
       transition: $transition-animation;
 
       &:hover,
