--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,28 +1,131 @@
-.hero {
-  max-width: 1600px;
-  background-color: #c4c4c4;
-  padding: 200px 0;
+@media screen and (max-width: 768px) {
+  .hero {
+    flex-grow: 1;
+    padding: 120px 0;
+    background-color: #c4c4c4;
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../images/bg-img-mobile.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../images/bg-img.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
+    &__title {
+      font-family: $main-font;
+      font-weight: 900;
+      font-size: 26px;
+      line-height: 1.62;
+      /* or 162% */
 
-  &__title {
-    font-family: $main-font;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    letter-spacing: 0.06em;
-    text-align: center;
-    text-transform: uppercase;
-    color: #ffffff;
+      text-align: center;
+      letter-spacing: 0.06em;
+      text-transform: uppercase;
 
-    max-width: 696px;
-    margin: 0 auto;
-    margin-bottom: 30px;
+      color: #ffffff;
+
+      max-width: 696px;
+      margin: 0 auto;
+      margin-bottom: 30px;
+    }
+  }
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url("../images/bg-img-mobile@2x.jpg");
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    padding: 120px 204px;
+    background-color: #c4c4c4;
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../images/bg-img-tablet.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    &__title {
+      font-family: $main-font;
+      font-weight: 900;
+      font-size: 26px;
+      line-height: 1.62;
+      /* or 162% */
+
+      text-align: center;
+      letter-spacing: 0.06em;
+      text-transform: uppercase;
+
+      color: #ffffff;
+
+      max-width: 696px;
+      margin: 0 auto;
+      margin-bottom: 30px;
+    }
+  }
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url("../images/bg-img-tablet@2x.jpg");
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    max-width: 1600px;
+    background-color: #c4c4c4;
+    padding: 200px 0;
+
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/bg-img-desktop.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    &__title {
+      font-family: $main-font;
+      font-weight: 900;
+      font-size: 44px;
+      line-height: 1.36;
+      letter-spacing: 0.06em;
+      text-align: center;
+      text-transform: uppercase;
+      color: #ffffff;
+
+      max-width: 696px;
+      margin: 0 auto;
+      margin-bottom: 30px;
+    }
+  }
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url("../images/bg-img-desktop@2x.jpg");
+    }
   }
 }
