--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,63 +1,136 @@
-.team {
-  background: #f5f4fa;
-  padding-bottom: $section-p;
-  padding-top: $section-p;
+@media screen and (max-width: 767px) {
+  .team {
+    background: #f5f4fa;
+    padding: 60px 0;
 
-  &__title {
-    @include font();
+    &__title {
+      font-family: $main-font;
+      font-weight: bold;
+      font-size: 28px;
+      line-height: 1.18;
+      letter-spacing: 0.03em;
+      color: $accent-color;
 
-    text-align: center;
-    margin-bottom: 50px;
-  }
+      text-align: center;
+      margin-bottom: 30px;
+    }
 
-  &__list {
-    margin-top: 50px;
-    display: flex;
-    margin-left: -30px;
-    margin-top: -30px;
-    flex-wrap: wrap;
-  }
+    // &__list {
+    //   margin-top: 50px;
+    //   display: flex;
+    //   margin-left: -30px;
+    //   margin-top: -30px;
+    //   flex-wrap: wrap;
+    // }
 
-  &__item {
-    background: #ffffff;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-      0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
+    &__item {
+      background: #ffffff;
+      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+      border-radius: 0px 0px 4px 4px;
 
-    &:not(last-child) {
-      flex-basis: calc(100% / 4-30px);
-      margin-left: 30px;
-      margin-top: 30px;
+      // &:not(last-child) {
+      //   flex-basis: calc(100% / 4-30px);
+      //   margin-left: 30px;
+      //   margin-top: 30px;
+
+      margin-bottom: 30px;
+    }
+
+    &__card {
+      padding: 30px;
+      background: #ffffff;
+      border-radius: 0px 0px 4px 4px;
+    }
+
+    &__name {
+      font-family: $main-font;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 1.18;
+      text-align: center;
+      letter-spacing: 0.03em;
+
+      color: $accent-color;
+    }
+
+    &__it {
+      font-family: $main-font;
+      font-weight: normal;
+      font-size: 16px;
+      line-height: 1.18;
+      text-align: center;
+      letter-spacing: 0.03em;
+      padding-top: 10px;
+      margin-bottom: 16px;
+
+      color: $secondary-color;
     }
   }
+}
 
-  &__card {
-    padding: 30px;
-    background: $accent-color;
-    border-radius: 0px 0px 4px 4px;
-  }
+@media screen and (min-width: 1200px) {
+  .team {
+    background: #f5f4fa;
+    padding-bottom: $section-p;
+    padding-top: $section-p;
 
-  &__name {
-    font-family: $main-font;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.18;
-    text-align: center;
-    letter-spacing: 0.03em;
+    &__title {
+      @include font();
 
-    color: $accent-color;
-  }
+      text-align: center;
+      margin-bottom: 50px;
+    }
 
-  &__it {
-    font-family: $main-font;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 1.18;
-    text-align: center;
-    letter-spacing: 0.03em;
-    padding-top: 10px;
-    margin-bottom: 16px;
+    &__list {
+      margin-top: 50px;
+      display: flex;
+      margin-left: -30px;
+      margin-top: -30px;
+      flex-wrap: wrap;
+    }
 
-    color: $secondary-color;
+    &__item {
+      background: #ffffff;
+      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+      border-radius: 0px 0px 4px 4px;
+
+      &:not(last-child) {
+        flex-basis: calc(100% / 4-30px);
+        margin-left: 30px;
+        margin-top: 30px;
+      }
+    }
+
+    &__card {
+      padding: 30px;
+      background: #ffffff;
+      border-radius: 0px 0px 4px 4px;
+    }
+
+    &__name {
+      font-family: $main-font;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 1.18;
+      text-align: center;
+      letter-spacing: 0.03em;
+
+      color: $accent-color;
+    }
+
+    &__it {
+      font-family: $main-font;
+      font-weight: normal;
+      font-size: 16px;
+      line-height: 1.18;
+      text-align: center;
+      letter-spacing: 0.03em;
+      padding-top: 10px;
+      margin-bottom: 16px;
+
+      color: $secondary-color;
+    }
   }
 }
