--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import "./base/container";
 
 @import "./components/logo";
+@import "./components/contact";
 @import "./components/social-list";
 @import "./components/button";
 @import "./components/overlay";
