--- a/css/main.css
+++ b/css/main.css
@@ -1225,6 +1225,66 @@ button {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .team {
+    display: flex;
+    background: #f5f4fa;
+    padding: 60px 0;
+  }
+  .team__title {
+    font-family: "Roboto", sans-serif;
+    font-weight: bold;
+    font-size: 28px;
+    line-height: 1.18;
+    letter-spacing: 0.03em;
+    color: #212121;
+    text-align: center;
+    margin-bottom: 30px;
+  }
+  .team__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+  }
+  .team__item {
+    align-items: center;
+    background: #ffffff;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+  }
+  .team__item:not(last-child) {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+    margin-top: 30px;
+  }
+  .team__card {
+    padding: 30px;
+    background: #ffffff;
+    border-radius: 0px 0px 4px 4px;
+  }
+  .team__name {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.18;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+  }
+  .team__it {
+    font-family: "Roboto", sans-serif;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 1.18;
+    text-align: center;
+    letter-spacing: 0.03em;
+    padding-top: 10px;
+    margin-bottom: 16px;
+    color: #757575;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .team {
     background: #f5f4fa;
@@ -1254,7 +1314,7 @@ button {
     border-radius: 0px 0px 4px 4px;
   }
   .team__item:not(last-child) {
-    flex-basis: calc(100% / 4-30px);
+    flex-basis: calc(100% / 4 - 30px);
     margin-left: 30px;
     margin-top: 30px;
   }
